@@ -1,3 +1,5 @@
+ * Remove Thumbnails in opendocument
+ * Clean meta in opendocument
  * Clean template code from draw:frame in opendocument
  * Use StringIO as failback of cStringIO
 
